Makes zipkin-cassandra work with normal Java (#3298)